Switched to PerfectHTTP server due to Kitura going down hill

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 .build
+/scale.xcodeproj/project.xcworkspace/xcuserdata/adrian.xcuserdatad/UserInterfaceState.xcuserstate
+xcschememanagement.plist
+.DS_Store
