--- a/scale.xcodeproj/xcshareddata/xcschemes/xcschememanagement.plist
+++ b/scale.xcodeproj/xcshareddata/xcschemes/xcschememanagement.plist
@@ -3,7 +3,7 @@
 <dict>
   <key>SchemeUserState</key>
   <dict>
-    <key>scale.xcscheme</key>
+    <key>scale-Package.xcscheme</key>
     <dict></dict>
   </dict>
   <key>SuppressBuildableAutocreation</key>
