--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /scale.xcodeproj/project.xcworkspace/xcuserdata/adrian.xcuserdatad/UserInterfaceState.xcuserstate
 xcschememanagement.plist
 .DS_Store
+*.xcuserdatad
